# FlushTools

./: CMakeLists.txt  CMakePresets.json  ReadMe.md
.github/workflows/: cpp_linux.yml  main.yml
include/: FlushTools.hpp  Timer.hpp
src/: FlushTools.cpp
tests/: test_flush_tools_random.cpp  test_flush_tools_timer.cpp
